--- a/gb/19/5/23/n11275130.md
+++ b/gb/19/5/23/n11275130.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/viliqq330/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/viliqq330/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台商回台投资 经济部估今年上看6千亿</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/0fe9e2a9b80754eddbe83880fac38c92-600x400.jpg" />
 <h6>经济部长沈荣津（左）表示，盘点目前等待审议的50案后，台商回台投资年度目标可破5,000亿，达到5,500或6,000亿。 （陈柏州／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年05月23日讯】（大纪元记者徐翠玲台湾台北报导）美中贸易战延烧，<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86%E5%9B%9E%E5%8F%B0.md#1">台商回台</a><ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84.md#1">投资</a>5月已破年度目标2,500亿元（台币，下同），总统蔡英文将该目标提高到5,000亿元。据台媒报导，<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>23日表示，盘点待审50案之后，目前掌握年度目标可达到5,500亿元或6,000亿元。而台商回台最大投资案目前是500亿元，后面还有更大案。</p>
-<p><ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>长沈荣津指出，在盘点目前等待审议的50案后，掌握已可破5,000亿元，达到5,500亿元或6,000亿元。之前提高年度目标设定5,000亿元时，美国总统川普还没公布3,250亿美元中国输美商品课税清单，以及对华为处置事件。这两个处置下来后，经济部接到很多过去台商咨询，比较犹疑的部分现在就比较积极。现在听到的有5、6千亿元了。</p>
-<p>经济部<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84.md#1">投资</a>处长张铭斌则说，目前尚有50家厂商等待审议。后面3,000亿元，都是包括后续影响比较大的手机、电脑等厂商，也逐渐回来了。</p>
+<p>【大纪元2019年05月23日讯】（大纪元记者徐翠玲台湾台北报导）美中贸易战延烧，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86%E5%9B%9E%E5%8F%B0.md#1">台商回台</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84.md#1">投资</a>5月已破年度目标2,500亿元（台币，下同），总统蔡英文将该目标提高到5,000亿元。据台媒报导，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>23日表示，盘点待审50案之后，目前掌握年度目标可达到5,500亿元或6,000亿元。而台商回台最大投资案目前是500亿元，后面还有更大案。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>长沈荣津指出，在盘点目前等待审议的50案后，掌握已可破5,000亿元，达到5,500亿元或6,000亿元。之前提高年度目标设定5,000亿元时，美国总统川普还没公布3,250亿美元中国输美商品课税清单，以及对华为处置事件。这两个处置下来后，经济部接到很多过去台商咨询，比较犹疑的部分现在就比较积极。现在听到的有5、6千亿元了。</p>
+<p>经济部<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%95%E8%B5%84.md#1">投资</a>处长张铭斌则说，目前尚有50家厂商等待审议。后面3,000亿元，都是包括后续影响比较大的手机、电脑等厂商，也逐渐回来了。</p>
 <p>外界算出电子十哥中，已有7家接近回台。目前有一些案子规划可能会超过500亿元，另外，5,500亿元中，今年会有1,600亿元左右落实。#</p>
 <p>责任编辑：郑桦</p>
 
@@ -16,42 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/4/29/n11222024.md#1">台商回流 立委：不要忽略中小企业</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/4/30/n11223285.md#1">美中贸易战进入“决赛圈” 外资撤中台商回流</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/5/22/n11272386.md#1">台商回台购地设厂潮 颜炳立：市场没有饥饿的台商</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/5/22/n11272552.md#1">农废高值化 工研院技转台商新南向打天下</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/31/n12297465.md#1">台立委疑涉SOGO案 王美花：配合检调</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12292197.md#1">制造业估下半年营运好转  厂商关切疫情走势、美中争端</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12292192.md#1">台积电走跌 谢金河：已完成阶段任务</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12289600.md#1">期货合约含违法风险指标 立委：金管会应修正</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/27/n12287168.md#1">电路板展不受疫情影响 10/21如期登场</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/27/n12287126.md#1">台青创600亿贷款 8月1日上路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/29/n11222024.md#1">台商回流 立委：不要忽略中小企业</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/30/n11223285.md#1">美中贸易战进入“决赛圈” 外资撤中台商回流</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/22/n11272386.md#1">台商回台购地设厂潮 颜炳立：市场没有饥饿的台商</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/22/n11272552.md#1">农废高值化 工研院技转台商新南向打天下</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678987.md#1">电价审议会今召开 立委吁涨工业大户</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678996.md#1">青年财务压力大 求职网：2成属“零存族”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678749.md#1">台积电高雄设厂通过初审 环团吁“自带绿电”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678690.md#1">俄乌战争冲击台经济成长 主计长：可保4</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678851.md#1">台使用牌照税开征 受疫情影响者可申请延缴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678674.md#1">台2月景气续亮黄红灯 国发会：成长力道趋缓</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/9/n11925917.md#1" target="_blank">掸封尘：毛泽东和江青有一个共同嗜好</a></li><li><a href="https://github.com/viliqq330/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11859230.md#1" target="_blank">李清：武汉肺炎的警示</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916777.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293305.md#1">武汉坠楼护士生前留言曝光 曾曝抗疫黑幕</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293985.md#1">美国关中领馆效应 亲共者大难临头各自飞</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293750.md#1">【翻墙必看】蝗灾已在大陆泛滥 麻烦大了</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12295214.md#1">李登辉生前称共产主义骗人 曾评价习近平</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293489.md#1">【新闻看点】美澳军事合作 欧盟27国制裁中共</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293399.md#1">与李晨分手一年 范冰冰首谈失恋心情</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290343.md#1">亲共举动遭炮轰 谭咏麟关闭脸书IG投奔微博</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290665.md#1">看完长文只回一个问号 杨幂释由登上热搜榜首</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12291118.md#1">身高18公尺 日本钢弹机器人跨出第一步</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12296166.md#1">杜汶泽悼念李登辉：台湾之父一路好走</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283672.md#1">【佳人传】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/16/n12261035.md#1">华盛顿将军系列故事：乔治·华盛顿精神</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283826.md#1">散文：忆香港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/23/n11275130.htm">台商回台投资 经济部估今年上看6千亿</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/23/n11275130.htm">台商回台投资 经济部估今年上看6千亿</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/viliqq330/djy/blob/master/gb/19/5/23/n11275130.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/5/23/n11275130.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
